# clean-code-python

./: README.md  pyproject.toml
python/src/design_pattern/: abstract_factory.py  singleton.py  strategy.py
src/: dummy.py
src/dont_use_else/: README.md  discount_service.py
src/doors_will_be_doors/: doors_will_be_doors.py
src/is_it_there_or_not/: README.md  is_it_there_or_not.py
tests/: test_discount_service.py  test_doors_will_be_doors.py  test_initial.py  test_is_it_there_or_not.py
